--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "base62": "^2.0.0",
     "body-parse": "^0.1.0",
     "cookie-parser": "~1.4.3",
+    "cron": "^1.5.1",
     "debug": "~2.6.9",
     "dotenv": "^6.1.0",
     "express": "~4.16.0",
